--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Coercion Visual Demo</title>
-  <script src="./coercion-visual.js"></script>
+  <script src="./coercion.js"></script>
   <style>
     .coercion {
       display: flex;
