--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
         font-weight:normal;
         text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
       }
-
+      tr td {
+        background: #EBEBEB;
+      }
       tr:hover td {
         background:#4E5066;
         color:#FFFFFF;
@@ -137,9 +139,13 @@
         border-bottom:none;
       }
 
-      tr:nth-child(odd) td {
-        background:#EBEBEB;
+      tr:last-child td {
+        background:#FFF;
       }
+
+      /* tr:nth-child(odd) td {
+        background:#EBEBEB;
+      } */
 
       tr:nth-child(odd):hover td {
         background:#4E5066;
