--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@
         let [a, b] = input.value.split(' == ')
         document.querySelector('#a').value = a
         document.querySelector('#b').value = b
+        document.querySelector('.coerce').click()
       }
     })
   </script>
